--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="light dark">
+
     <title>Закрывающий тег</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/variables.css" />
-    <link rel="stylesheet" href="./styles/globals.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/animations.css" />
-    <link rel="stylesheet" href="./styles/themes.css" />
+
+    <link rel="icon" href="./images/optimized-favicon.svg" type="image/svg+xmlns">
+    <link rel="icon" href="./images/favicon.ico" sizes="any">
+    <link rel="apple-touch-icon" href="./images/mobile-favicon.png">
+
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/animations.css">
+    <link rel="stylesheet" href="./styles/themes.css">
+
     <script src="./scripts/set-theme.js"></script>
   </head>
+
+
   <body class="page">
-    <header class="header">
+    <header class="header content__section">
+      <h1 class="header__title">&lt;/HTML&gt;</h1>
+      <p class="header__phrase">закрывающий тег</p>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -40,7 +52,288 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+
+
+    <main class="main content__section">
+      <article class="card">
+        <h2 class="card__title">Фритрек и нулевой спринт: Подготовка к работе
+        </h2>
+        <div class="card__image-wrapper">
+          <span class="image__label">&lt;/HTML&gt;
+          </span>
+          <img src="./images/image.jpg" alt="Изображение автомобиля" class="card__image">
+        </div>
+        <div class="card__content">
+          <div class="card__content-text">
+            <p class="card__text">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
+            <p class="card__text">Место для ваших воспоминаний о начале обучения. </p>
+          </div>
+          <div class="card__buttons">
+            <button class="card__buttons-icon-button" type="button">
+              <svg
+                class="card__buttons-icon-like"
+                width="39"
+                height="36"
+                viewBox="0 0 39 36"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+              </svg>
+            </button>
+            <button class="button card__buttons-like" type="button">
+              <span class="button__text">Like</span>
+            </button>
+          </div>
+        </div>
+      </article>
+
+      <article class="card">
+        <h2 class="card__title">1 спринт: Я — чистый лист
+        </h2>
+        <div class="card__image-wrapper">
+          <span class="image__label">&lt;/HTML&gt;
+          </span>
+          <img src="./images/image.jpg" alt="Изображение автомобиля" class="card__image">
+        </div>
+        <div class="card__content">
+          <div class="card__content-text">
+            <p class="card__text">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
+            <p class="card__text">Место для ваших воспоминаний о начале обучения. </p>
+          </div>
+          <div class="card__buttons">
+            <button class="card__buttons-icon-button" type="button">
+              <svg
+                class="card__buttons-icon-like"
+                width="39"
+                height="36"
+                viewBox="0 0 39 36"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+              </svg>
+            </button>
+            <button class="button card__buttons-like" type="button">
+              <span class="button__text">Like</span>
+            </button>
+          </div>
+        </div>
+      </article>
+
+      <article class="card">
+        <h2 class="card__title">1 спринт: А если не получится?
+        </h2>
+        <div class="card__image-wrapper">
+          <span class="image__label">&lt;CSS&gt;
+          </span>
+          <img src="./images/image.jpg" alt="Изображение автомобиля" class="card__image">
+        </div>
+        <div class="card__content">
+          <div class="card__content-text">
+            <p class="card__text">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
+            <p class="card__text">Место для ваших воспоминаний о начале обучения. </p>
+          </div>
+          <div class="card__buttons">
+            <button class="card__buttons-icon-button" type="button">
+              <svg
+                class="card__buttons-icon-like"
+                width="39"
+                height="36"
+                viewBox="0 0 39 36"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+              </svg>
+            </button>
+            <button class="button card__buttons-like" type="button">
+              <span class="button__text">Like</span>
+            </button>
+          </div>
+        </div>
+      </article>
+
+      <article class="card">
+        <h2 class="card__title">2 спринт: Погоня за идеалом
+        </h2>
+        <div class="card__image-wrapper">
+          <span class="image__label">&lt;desigions&gt;
+          </span>
+          <img src="./images/image.jpg" alt="Изображение автомобиля" class="card__image">
+        </div>
+        <div class="card__content">
+          <div class="card__content-text">
+            <p class="card__text">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
+            <p class="card__text">Место для ваших воспоминаний о начале обучения. </p>
+          </div>
+          <div class="card__buttons">
+            <button class="card__buttons-icon-button" type="button">
+              <svg
+                class="card__buttons-icon-like"
+                width="39"
+                height="36"
+                viewBox="0 0 39 36"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+              </svg>
+            </button>
+            <button class="button card__buttons-like" type="button">
+              <span class="button__text">Like</span>
+            </button>
+          </div>
+        </div>
+      </article>
+
+      <article class="card">
+        <h2 class="card__title">2 спринт: О тех, кто рядом
+        </h2>
+        <div class="card__image-wrapper">
+          <span class="image__label">care
+          </span>
+          <img src="./images/image.jpg" alt="Изображение автомобиля" class="card__image">
+        </div>
+        <div class="card__content">
+          <div class="card__content-text">
+            <p class="card__text">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
+            <p class="card__text">Место для ваших воспоминаний о начале обучения. </p>
+          </div>
+          <div class="card__buttons">
+            <button class="card__buttons-icon-button" type="button">
+              <svg
+                class="card__buttons-icon-like"
+                width="39"
+                height="36"
+                viewBox="0 0 39 36"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+              </svg>
+            </button>
+            <button class="button card__buttons-like" type="button">
+              <span class="button__text">Like</span>
+            </button>
+          </div>
+        </div>
+      </article>
+
+      <article class="card">
+        <h2 class="card__title">3 спринт: Обходные стратегии
+        </h2>
+        <div class="card__image-wrapper">
+          <span class="image__label">&lt;support&gt;
+          </span>
+          <img src="./images/image.jpg" alt="Изображение автомобиля" class="card__image">
+        </div>
+        <div class="card__content">
+          <div class="card__content-text">
+            <p class="card__text">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
+            <p class="card__text">Место для ваших воспоминаний о начале обучения. </p>
+          </div>
+          <div class="card__buttons">
+            <button class="card__buttons-icon-button" type="button">
+              <svg
+                class="card__buttons-icon-like"
+                width="39"
+                height="36"
+                viewBox="0 0 39 36"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+              </svg>
+            </button>
+            <button class="button card__buttons-like" type="button">
+              <span class="button__text">Like</span>
+            </button>
+          </div>
+        </div>
+      </article>
+
+      <article class="card">
+        <h2 class="card__title">3 спринт: Когда опускаются руки
+        </h2>
+        <div class="card__image-wrapper">
+          <span class="image__label">&lt; lifes-style: none;&gt;
+          </span>
+          <img src="./images/image.jpg" alt="Изображение автомобиля" class="card__image">
+        </div>
+        <div class="card__content">
+          <div class="card__content-text">
+            <p class="card__text">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
+            <p class="card__text">Место для ваших воспоминаний о начале обучения. </p>
+          </div>
+          <div class="card__buttons">
+            <button class="card__buttons-icon-button" type="button">
+              <svg
+                class="card__buttons-icon-like"
+                width="39"
+                height="36"
+                viewBox="0 0 39 36"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+              </svg>
+            </button>
+            <button class="button card__buttons-like" type="button">
+              <span class="button__text">Like</span>
+            </button>
+          </div>
+        </div>
+      </article>
+
+      <article class="card">
+        <h2 class="card__title">«Сейчас я здесь»
+        </h2>
+        <div class="card__image-wrapper">
+          <span class="image__label">&lt;experiene&gt;
+          </span>
+          <img src="./images/image.jpg" alt="Изображение автомобиля" class="card__image">
+        </div>
+        <div class="card__content">
+          <div class="card__content-text">
+            <p class="card__text">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
+            <p class="card__text">Место для ваших воспоминаний о начале обучения. </p>
+          </div>
+          <div class="card__buttons">
+            <button class="card__buttons-icon-button" type="button">
+              <svg
+                class="card__buttons-icon-like"
+                width="39"
+                height="36"
+                viewBox="0 0 39 36"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+              </svg>
+            </button>
+            <button class="button card__buttons-like" type="button">
+              <span class="button__text">Like</span>
+            </button>
+          </div>
+        </div>
+      </article>
+
+      <div class="button__save">
+        <button 
+          class="button button__save-button"
+          type="button"
+          onclick="window['button-popup'].showModal();"
+          aria-controls="button-popup"
+        >
+          <svg class="button__save-icon" viewBox="0 0 39 39">
+            <use href="./svg/floppy-optimized.svg"></use>
+          </svg>
+          <span class="button__text">Сохранить на память</span>
+        </button>
+      </div>
+      <dialog class="popup" id="button-popup">
+        <div class="popup__wrapper">
+          <div class="popup__svg">
+            <svg class="popup__svg-icon floppydisk__icon" viewBox="0 0 39 39">
+              <use href="./svg/floppy-optimized.svg"></use>
+            </svg>
+          </div>
+          <p class="popup__text">Вставьте
+            дискету, чтобы продолжить</p>
+        </div>
+        <button class="button popup__button-close" type="button" onclick="window['button-popup'].close();">
+          <span class="button__text">ок</span>
+        </button>
+      </dialog>
+
+    </main>
+
+
     <script src="./scripts/like.js"></script>
   </body>
 </html>
