push before 1st review

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           <span class="image__label">&lt;desigions&gt;</span>
           <img src="./images/image.jpg" alt="Изображение автомобиля" class="card__image img__filter-grayscale">
         </div>
-        <div class="card__content">
+        <div class="card__content extra">
           <div class="card__content-text">
             <p class="card__text">На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не подвержены перфекционизму и вместо того, чтобы сделать идеально, старались просто сделать.</p>
             <p class="card__text">Место для ваших воспоминаний о начале второго спринта.</p>
@@ -380,7 +380,7 @@
           <span class="image__label">&lt;lifes-style: none;&gt;</span>
           <img src="./images/image.jpg" alt="Изображение автомобиля" class="card__image img__filter-sepia">
         </div>
-        <div class="card__content">
+        <div class="card__content extra2">
           <div class="card__content-text">
             <p class="card__text">Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты очень нужна концентрация. Вспомните, откуда вы её черпали.</p>
             <p class="card__text">Место для ваших воспоминаний об окончании третьего спринта.</p>
