push after 1st review/ bug fix

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
           </div>
           <div class="card__buttons">
             <button class="card__icon-button" type="button">
-              <svg
+              <svg 
+              aria-hidden="true"
               class="like-icon"
               width="39"
               height="36"
@@ -123,6 +124,7 @@
           <div class="card__buttons">
             <button class="card__icon-button" type="button">
               <svg
+              aria-hidden="true"
               class="like-icon"
               width="39"
               height="36"
@@ -176,6 +178,7 @@
           <div class="card__buttons">
             <button class="card__icon-button" type="button">
               <svg
+              aria-hidden="true"
               class="like-icon"
               width="39"
               height="36"
@@ -229,6 +232,7 @@
           <div class="card__buttons">
             <button class="card__icon-button" type="button">
               <svg
+              aria-hidden="true"
               class="like-icon"
               width="39"
               height="36"
@@ -282,6 +286,7 @@
           <div class="card__buttons">
             <button class="card__icon-button" type="button">
               <svg
+              aria-hidden="true"
               class="like-icon"
               width="39"
               height="36"
@@ -335,6 +340,7 @@
           <div class="card__buttons">
             <button class="card__icon-button" type="button">
               <svg
+              aria-hidden="true"
               class="like-icon"
               width="39"
               height="36"
@@ -388,6 +394,7 @@
           <div class="card__buttons">
             <button class="card__icon-button" type="button">
               <svg
+              aria-hidden="true"
               class="like-icon"
               width="39"
               height="36"
@@ -441,6 +448,7 @@
           <div class="card__buttons">
             <button class="card__icon-button" type="button">
               <svg
+              aria-hidden="true"
               class="like-icon"
               width="39"
               height="36"
