push before 3rd review / bug fix

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
           <span class="image__label">care</span>
           <img src="./images/image.jpg" alt="Изображение автомобиля" class="card__image img__filter-saturate">
         </div>
-        <div class="card__content">
+        <div class="card__content extra">
           <div class="card__content-text">
             <p class="card__text">Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). Вас окружали одногруппники, команда сопровождения и просто близкие люди, которым можно пожаловаться, если очередной макет просто так не поддавался. Осваивать что-то новое легче, когда рядом есть единомышленники, не правда ли?</p>
             <p class="card__text">Место для ваших воспоминаний об окончании второго спринта.</p>
@@ -386,7 +386,7 @@
           <span class="image__label">&lt;lifes-style: none;&gt;</span>
           <img src="./images/image.jpg" alt="Изображение автомобиля" class="card__image img__filter-sepia">
         </div>
-        <div class="card__content extra2">
+        <div class="card__content extra">
           <div class="card__content-text">
             <p class="card__text">Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты очень нужна концентрация. Вспомните, откуда вы её черпали.</p>
             <p class="card__text">Место для ваших воспоминаний об окончании третьего спринта.</p>
@@ -440,7 +440,7 @@
           <span class="image__label">&lt;experience&gt;</span>
           <img src="./images/image.jpg" alt="Изображение автомобиля" class="card__image img__filter-many">
         </div>
-        <div class="card__content">
+        <div class="card__content extra">
           <div class="card__content-text">
             <p class="card__text">Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И этот мир постоянно меняется. Познать его полностью не получится, но это тот случай, когда важен сам процесс познания. Ведь часто путь — и есть результат.</p>
             <p class="card__text">Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.</p>
